# MachineLearning

./: MachineLearning.cabal
app/: Main.hs
src/: Ex2.hs
